fix: avoid overflow on app main container and footer

--- a/gravitee-apim-portal-webui-next/src/components/footer/footer.component.scss
+++ b/gravitee-apim-portal-webui-next/src/components/footer/footer.component.scss
@@ -15,7 +15,11 @@
  */
 :host {
   display: flex;
+  width: 100%;
+  max-width: 100%;
+  box-sizing: border-box;
   flex-flow: row;
   align-items: center;
   justify-content: space-between;
+  overflow-x: hidden;
 }
